fix search bar design issue Imported from Changeset 2707

--- a/WarehouseEcommerce/Views/Theme/University/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_TopHeaderPartial.cshtml
@@ -22,7 +22,7 @@
     </div>
     <div class="container head-container">
         <div class="search_wrap_main">
-            <div class="form-inline" style="width: 60%">
+            <div class="form-inline m-auto uni-search-div">
                 <label class="sr-only" for="searchinput">Name</label>
                 <input type="search" class="form-control search_input text-search" id="searchinput" placeholder="Search Here" />
                 <div class="search-box-buttons float-left">
