--- a/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
@@ -2844,3 +2844,29 @@ body.modal-open {
         box-shadow: 0 -18px 0 0 #b0aeb4, 12.72984px -12.72984px 0 0 #b0aeb4, 18px 0 0 -5px rgba(152, 128, 255, 0), 12.72984px 12.72984px 0 -5px rgba(152, 128, 255, 0), 0 18px 0 -5px rgba(152, 128, 255, 0), -12.72984px 12.72984px 0 -5px rgba(152, 128, 255, 0), -18px 0 0 -5px rgba(152, 128, 255, 0), -12.72984px -12.72984px 0 0 #b0aeb4;
     }
 }
+
+/*.ui-autocomplete {
+    display: block !important;
+}*/
+.search-item a.ui-state-active {
+        border: unset !important;
+        background: unset !important;
+        color: #ffffff !important;
+    }
+.search-item:hover {
+    background-color: #111111;
+}
+.search-item .ui-menu-item-wrapper {
+    padding-left: 2px!important;
+}
+.search-item .ui-menu-item-wrapper img {
+        margin-right: 6px;
+}
+.uni-search-div {
+    width: 60%;
+}
+@media(max-width:1024px) {
+    .uni-search-div {
+        width: 98%;
+    }
+}
