--- a/WarehouseEcommerce/Views/Theme/University/Orders/SagePay.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/SagePay.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Ganedata.Core.Entities.Enums;
+@model Ganedata.Core.Entities.Domain.CheckoutViewModel
 @{
     ViewBag.Title = "Sagepay";
 }
@@ -40,8 +41,7 @@
                 <div class="checkoutInnersec Paymentsec">
                     <h4 class="ordConfirmHead">Payments</h4>
                     <div class="orderTotalsec">
-                        <div>Order Total</div>
-                        <div>Total <span>£@ViewBag.TotalPrice</span></div>
+                        <div> Order Total <span>@Model.CurrencySymbol@Model.TotalOrderAmount</span></div>
                     </div>
 
                     <div class="paymentTabsec">
