--- a/WarehouseEcommerce/Content/Theme/University/app/css/northumbria_responsive.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/northumbria_responsive.css
@@ -132,6 +132,14 @@
     #marqueeWrap ul {
         animation: marquee 15s linear infinite;
     }
+
+    .accordion ul li:last-child {
+        left: auto;
+    }
+
+        .accordion ul li:last-child:after {
+            display: none;
+        }
 }
 
 @media (max-width: 1024px) {
@@ -237,45 +245,45 @@
             flex-wrap: wrap;
         }
 
-            .accordion ul li {
-                width: 48%;
-                display: inline-block;
-                margin-bottom: 20px;
-            }
+    .nb_top_catSection .accordion ul li {
+        width: 43%;
+        display: inline-block;
+        margin-bottom: 20px;
+    }
 
-                .accordion ul li:last-child {
-                    width: 48%;
-                    left: auto;
-                }
-
-                .accordion ul li div a h2 {
-                    color: #000;
-                    background: rgb(255, 255, 255);
-                }
-
-                .accordion ul li:nth-child(1) {
-                    width: 48%;
-                }
-
-            .accordion ul:hover li {
-                width: 48%;
-            }
-
-                .accordion ul:hover li:hover {
-                    width: 48%;
-                }
-
-        .accordion.have2child ul li:first-child {
-            clip-path: none;
+        .nb_top_catSection .accordion ul li:last-child {
+            width: 43%;
+            left: auto;
         }
 
-        .accordion.have2child ul li:last-child {
-            clip-path: none;
+        .nb_top_catSection .accordion ul li div a h2 {
+            color: #000;
+            background: rgb(255, 255, 255);
         }
 
-        .accordion.have1child ul li {
-            width: 100%;
+        .nb_top_catSection .accordion ul li:nth-child(1) {
+            width: 43%;
         }
+
+    .accordion ul:hover li {
+        width: 43%;
+    }
+
+        .accordion ul:hover li:hover {
+            width: 43%;
+        }
+
+    .accordion.have2child ul li:first-child {
+        clip-path: none;
+    }
+
+    .accordion.have2child ul li:last-child {
+        clip-path: none;
+    }
+
+    .accordion.have1child ul li {
+        width: 100%;
+    }
 
     .nb_bnr_count {
         display: none;
@@ -594,28 +602,28 @@
             margin-bottom: 10px;
         }
 
-    .accordion ul li {
-        width: 43%;
+    .nb_top_catSection .accordion ul li {
+        width: 40%;
         margin: 10px;
         display: inline-block;
     }
 
-        .accordion ul li:last-child {
-            width: 43%;
+        .nb_top_catSection .accordion ul li:last-child {
+            width: 40%;
             left: auto;
         }
 
-        .accordion ul li div a h2 {
+        .nb_top_catSection .accordion ul li div a h2 {
             color: #000;
             background: rgb(255, 255, 255);
         }
 
-        .accordion ul li:nth-child(1) {
-            width: 43%;
+        .nb_top_catSection .accordion ul li:nth-child(1) {
+            width: 40%;
         }
 
-    .accordion ul:hover li {
-        width: 43%;
+    .nb_top_catSection .accordion ul:hover li {
+        width: 40%;
     }
 
     .accordion.have2child ul li:first-child {
