hide the add to basket button when the action is not allowed for product. Imported from Changeset 2719

--- a/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
@@ -2928,3 +2928,7 @@ body.modal-open {
     white-space: pre-wrap;
     padding-bottom:15px;
 }
+
+.prd_lst_boxouter .prdName {
+    color: #111111;
+}
