--- a/WarehouseEcommerce/Content/Theme/University/app/css/northumbria_responsive.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/northumbria_responsive.css
@@ -140,7 +140,11 @@
         .accordion ul li:last-child:after {
             display: none;
         }
+    .progressBarStep ul#progressList {
+        width: 100%;
+    }
 }
+
 
 @media (max-width: 1024px) {
     .nb_prd_det_rightsec .head {
@@ -161,6 +165,56 @@
 
     .nb_prd_det_rightsec .footSec button.addTobasket {
         margin-right: 20px;
+    }
+    .basketTable tr.cmnRow .prd .prdCellwrap .inrow .prdName {
+        padding: 12px 10px;
+    }
+
+    .gotApromoSec .head {
+        text-align: center;
+    }
+
+    .gotApromoSec .gotApromoSecInner {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .gotApromoSec {
+        margin-bottom: 55px;
+    }
+
+    .basketTable tr.cmnRow .prd .prdCellwrap .inrow.btm .imgWrap {
+        display: none;
+    }
+
+    .basketTable tr.cmnRow td.greyBox .greyBoxInner .orderNowTxt {
+        padding: 0 15px;
+    }
+
+    .basketTable tr.cmnRow td.greyBox .greyBoxInner .EnterYourPostTxt {
+        padding: 0px 20px;
+    }
+
+    .container {
+        max-width: 991px;
+    }
+
+    .basketTable tr.cmnRow td.greyBox .greyBoxInner .orderNowTxt {
+        font-size: 12px;
+    }
+
+    .basketTable tr.cmnRow td.greyBox .greyBoxInner .radioBtnGrp li label {
+        font-size: 12px;
+    }
+
+    .basketTable tr.cmnRow .prd .prdCellwrap .inrow .prdName {
+        font-size: 14px;
+    }
+
+    .basketTable tr td .headBoxTop .head {
+        font-size: 16px;
     }
 }
 
@@ -211,6 +265,31 @@
         .nb_sec_navlist li a i {
             margin: 5px 0px;
         }
+    .progressBarStep ul#progressList li span.txt {
+        font-size: 12px;
+    }
+
+    #quickCartAddedtobasket .modal-dialog {
+        max-width: 90%;
+    }
+
+        #quickCartAddedtobasket .modal-dialog .modal-content .modal-body .addedTobasketModelWrap table {
+            width: 600px;
+        }
+
+        #quickCartAddedtobasket .modal-dialog .modal-content .modal-body .addedTobasketModelWrap {
+            overflow: scroll;
+        }
+
+    .basketTable {
+        width: 991px;
+        overflow: scroll;
+    }
+
+    .tableWrap {
+        width: 100%;
+        overflow: scroll;
+    }
 }
 
 @media (max-width: 768px) {
@@ -479,6 +558,22 @@
 
     .navListWrap {
         overflow: scroll;
+    }
+    .progressBarStep ul#progressList li span.txt {
+        display: none;
+    }
+    .progressBarStep ul#progressList li .HalfCircle {
+        display: none;
+    }
+
+    .progressBarStep ul#progressList li:after {
+        width: 60px;
+        height: 60px;
+    }
+
+    .progressBarStep {
+        padding-bottom: 30px;
+        margin-bottom: 30px;
     }
 }
 
