--- a/WarehouseEcommerce/Views/Theme/ElecTech/Home/AboutUs.cshtml
+++ b/WarehouseEcommerce/Views/Theme/ElecTech/Home/AboutUs.cshtml
@@ -11,7 +11,7 @@
                         <h1 class="cd-headline clip is-full-width">
                             <span class="cd-words-wrapper">
                                 <b class="is-visible">About Ganedata</b>
-                                <b>Here you can check what our company is about</b>
+                                <b class="is-hidden">Here you can check what our company is about</b>
                             </span>
                         </h1>
                         <a class="custom-green" href="get-started">Book a Demo <i class="fa fa-arrow-right"></i></a>
