--- a/WarehouseEcommerce/Content/Theme/University/app/css/northumbria_responsive.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/northumbria_responsive.css
@@ -529,7 +529,7 @@
         position: fixed;
         width: 320px !important;
         left: 0;
-        top: 0;
+        top: 202px;
         background-color: #fff;
         z-index: 100;
         padding: 20px;
