--- a/WarehouseEcommerce/Views/Theme/University/Products/list.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/list.cshtml
@@ -71,7 +71,7 @@
         </div>
         <div class="row">
             @Html.Action("_DynamicFilters", new { category = ViewBag.Category, productName = ViewBag.CurrentFilter })
-            <div class="col-md-8 col-lg-9">
+            <div class="col-md-8 col-lg-9 list-on-tablets">
                 <div class="nb_prd_listing_wrap">
                     @*<h3 class="head">New</h3>
         <ul class="tagList">
