--- a/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
@@ -2716,7 +2716,7 @@ body.modal-open {
 
     .nb_header {
         height: 200px;
-        padding: 35px 0px 18px 35px;
+        padding: 35px 10px 18px 10px;
     }
 
     .main-logo {
@@ -2757,11 +2757,70 @@ body.modal-open {
     }
 
     .prd_lst_boxouter .imagewrap img {
-        width: auto;
-        height: auto;
+        width: 354px;
+        height: 354px;
     }
 }
-
+@media(max-width:700px){
+    .prd_lst_boxouter .imagewrap img {
+        width: 320px;
+        height: 320px;
+    }
+}
+@media(max-width:650px) {
+    .prd_lst_boxouter .imagewrap img {
+        width: 295px;
+        height: 295px;
+    }
+}
+@media(max-width:600px) {
+    .prd_lst_boxouter .imagewrap img {
+        width: 270px;
+        height: 270px;
+    }
+}
+@media(max-width:550px) {
+    .prd_lst_boxouter .imagewrap img {
+        width: 245px;
+        height: 245px;
+    }
+}
+@media(max-width:500px) {
+    .prd_lst_boxouter .imagewrap img {
+        width: 220px;
+        height: 220px;
+    }
+}
+@media(max-width:450px) {
+    .prd_lst_boxouter .imagewrap img {
+        width: 195px;
+        height: 195px;
+    }
+}
+@media(max-width:425px) {
+    .prd_lst_boxouter .imagewrap img {
+        width: 182px;
+        height: 182px;
+    }
+}
+@media(max-width:375px) {
+    .prd_lst_boxouter .imagewrap img {
+        width: 157px;
+        height: 157px;
+    }
+}
+@media(max-width:375px) {
+    .prd_lst_boxouter .imagewrap img {
+        width: 157px;
+        height: 157px;
+    }
+}
+@media(max-width:350px) {
+    .prd_lst_boxouter .imagewrap img {
+        width: 130px;
+        height: 130px;
+    }
+}
 .nb_sec_navwrap .nb_sec_navlist li {
     cursor: pointer;
 }
@@ -2949,4 +3008,14 @@ body.modal-open {
 
 .prd_lst_boxouter .prdName {
     color: #111111;
+}
+.srtby_txt {
+    white-space:nowrap;
+}
+@media(max-width:768px){
+    .list-on-tablets{
+        width:100%;
+        flex:unset;
+        max-width:unset;
+    }
 }
